fix: bump deno version v0.3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
     "target": "es2018",
-    "baseUrl": ".",
+    "baseUrl": "/Users/keroxp/Library/Caches",
     "paths": {
-      "deno": ["./deno.d.ts"],
       "https://*": [
-        "../../.deno/deps/https/*"
+        "./deno/deps/https/*"
       ],
       "http://*": [
-        "../../.deno/deps/http/*"
+        "./deno/deps/http/*"
       ]
     }
   }
