--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 
 install:
-- curl -L https://deno.land/x/install/install.py | python - v0.2.6
+- curl -fsSL https://deno.land/x/install/install.sh | sh -s -- v0.3.0
 - export PATH="$HOME/.deno/bin:$PATH"
 
 services:
