--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 
 install:
-- curl -fsSL https://deno.land/x/install/install.sh
+- curl -fsSL https://deno.land/x/install/install.sh | sh
 - export PATH="$HOME/.deno/bin:$PATH"
 
 services:
