--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 
 install:
-- curl -fsSL https://deno.land/x/install/install.sh | sh -s -- v0.12.0
+- curl -fsSL https://deno.land/x/install/install.sh | sh -s -- v0.13.0
 - export PATH="$HOME/.deno/bin:$PATH"
 
 services:
 - redis
 
 script:
-- deno run --allow-net test.ts 
+- deno -A test.ts
