--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: debian:stretch
+      - image: circleci/node:stretch
     environment:
       PATH: $HOME/:deno/bin:$PATH
     steps:
@@ -10,7 +10,6 @@ jobs:
       - run:
           name: Install Deno
           command: |
-            apt-get install curl
             curl -fsSL https://deno.land/x/install/install.sh | bash -s -- v0.13.0
       - run:
           name: Run Tests
