--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,6 @@ jobs:
   build:
     docker:
       - image: circleci/node:stretch
-    environment:
-      PATH: "$HOME/.deno/bin:$PATH"
     steps:
       - checkout
       - run:
@@ -13,4 +11,6 @@ jobs:
             curl -fsSL https://deno.land/x/install/install.sh | bash -s -- v0.13.0
       - run:
           name: Run Tests
-          command: deno -A test.ts
+          command: |
+            export PATH=$HOME/.deno/bin:$PATH
+            deno -A test.ts
