--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,7 @@ jobs:
       - checkout
       - run:
           name: Install Deno
-          command: |
-            curl -fsSL https://deno.land/x/install/install.sh | bash -s -- v0.13.0
+          command: curl -fsSL https://deno.land/x/install/install.sh | sh -s -- v0.17.0
       - run:
           name: Run Tests
           command: |
