--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ jobs:
       - checkout
       - run:
           name: Install Deno
-          command: curl -fsSL https://deno.land/x/install/install.sh | sh -s -- v0.17.0
+          command: curl -fsSL https://deno.land/x/install/install.sh | sh -s -- v0.19.0
       - run:
           name: Run Tests
           command: |
             export PATH=$HOME/.deno/bin:$PATH
-            deno -A test.ts
+            deno -A test
