--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -1,23 +1,22 @@
-name: CI
+name: Bump
 
-on: [push]
-
+on:
+  schedule:
+    - cron: 0 13 * * *    
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    services:
-      redis:
-        image: redis
-        ports:
-        - 6379:6379
     steps:
     - uses: actions/checkout@v1
     - name: Install Deno
       run: |
         DENO_VERSION=$(cat .denov)
         curl -fsSL https://deno.land/x/install/install.sh | bash -s -- ${DENO_VERSION}
-    - name: Run Tests
+    - name: Check And Bump
+      env:
+        GITHUB_USER: keroxp
+        GITHUB_REPO: deno-redis
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         export PATH=$HOME/.deno/bin:$PATH
-        deno -A test
+        deno run -A https://denopkg.com/keroxp/dink-bot@v0.1.0/main.ts
