--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -6,6 +6,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis
+        ports:
+        - 6379:6379
     steps:
     - uses: actions/checkout@v1
     - name: Install Deno
@@ -19,4 +24,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         export PATH=$HOME/.deno/bin:$PATH
-        deno run -A https://denopkg.com/keroxp/dink-bot@v0.1.0/main.ts
+        deno run -A https://denopkg.com/keroxp/dink-bot@v0.2.0/main.ts
