--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -13,15 +13,7 @@ jobs:
         - 6379:6379
     steps:
     - uses: actions/checkout@v1
-    - name: Install Deno
-      run: |
-        DENO_VERSION=$(cat .denov)
-        curl -fsSL https://deno.land/x/install/install.sh | bash -s -- ${DENO_VERSION}
-    - name: Check And Bump
-      env:
-        GITHUB_USER: keroxp
-        GITHUB_REPO: deno-redis
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        export PATH=$HOME/.deno/bin:$PATH
-        deno run -A https://denopkg.com/keroxp/dink-bot@v0.2.0/main.ts
+    - uses: keroxp/dink-bot@v0.2.1
+      with:
+        github-repository: ${{ github.repository }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
