--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -1,6 +1,9 @@
 name: Bump
 
 on:
+  push:
+    branches:
+      - ci-test
   schedule:
     - cron: 0 13 * * *    
 jobs:
@@ -13,7 +16,7 @@ jobs:
         - 6379:6379
     steps:
     - uses: actions/checkout@v1
-    - uses: keroxp/dink-bot@v0.3.0
+    - uses: keroxp/dink-bot@v0.3.3
       with:
         github-repository: ${{ github.repository }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
