--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,14 @@
 name: CI
-
-on: [push]
-
+on:
+  push:
+    branches:
+      - "**"      
+  pull_request:
+    types:
+      - labeled
 jobs:
   build:
-
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.label.name == 'CI start')
     runs-on: ubuntu-latest
     services:
       redis:
@@ -12,12 +16,12 @@ jobs:
         ports:
         - 6379:6379
     steps:
-    - uses: actions/checkout@v1
-    - name: Install Deno
-      run: |
-        DENO_VERSION=$(cat .denov)
-        curl -fsSL https://deno.land/x/install/install.sh | bash -s -- ${DENO_VERSION}
-    - name: Run Tests
-      run: |
-        export PATH=$HOME/.deno/bin:$PATH
-        deno test -A
+      - uses: actions/checkout@v1
+      - name: Install Deno
+        run: |
+          DENO_VERSION=$(cat .denov)
+          curl -fsSL https://deno.land/x/install/install.sh | bash -s -- ${DENO_VERSION}
+      - name: Run Tests
+        run: |
+          export PATH=$HOME/.deno/bin:$PATH
+          deno test -A
