--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,5 +23,5 @@ jobs:
           curl -fsSL https://deno.land/x/install/install.sh | bash -s -- ${DENO_VERSION}
       - name: Run Tests
         run: |
-          export PATH=$HOME/.deno/bin:$PATH
+          export PATH=$HOME/.local/bin:$PATH
           deno test -A
