--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -16,7 +16,7 @@ jobs:
         - 6379:6379
     steps:
     - uses: actions/checkout@v1
-    - uses: keroxp/dink-bot@v1
+    - uses: keroxp/dink-bot@master
       with:
         github-repository: ${{ github.repository }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
