--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,10 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install Deno
         run: |
-          DENO_VERSION=$(cat .denov)
-          curl -fsSL https://deno.land/x/install/install.sh | bash -s -- ${DENO_VERSION}
+          echo "::set-env name=DENO_VERSION::$(cat .denov)"
+      - uses: denolib/setup-deno@master
+        with:
+          deno-version: ${{ env.DENO_VERSION }}
       - name: Run Tests
         run: |
-          export PATH=$HOME/.local/bin:$PATH
           make test
