build: run "deno lint" and "deno fmt --check" in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
         run: |
           deno run --allow-read --allow-write tools/make_mod.ts
           git diff --exit-code
+      - name: Run lint
+        run: |
+          make lint
       - name: Run Tests
         run: |
           make test      
