--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,10 @@ on:
     branches:
       - "**"      
   pull_request:
-    types:
-      - labeled
+    branches:
+      - "**"
 jobs:
   build:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.label.name == 'CI start')
     runs-on: ubuntu-latest
     services:
       redis:
