fix(#104): re-enable testSubscribe4

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
         image: redis
         ports:
         - 6379:6379
+    env:
+      USE_DOCKER: "1"
     steps:
       - uses: actions/checkout@v1
       - name: Install Deno
