--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    services:
-      redis:
-        image: redis
-        ports:
-        - 6379:6379
     steps:
       - uses: actions/checkout@v1
       - name: Install Deno
@@ -29,6 +24,15 @@ jobs:
       - name: Run lint
         run: |
           make lint
+      - name: Install and start Redis
+        run: |
+          make testdeps
+          make start-redis
+          sleep 1
+          echo "::add-path::./testdata/redis/src"
       - name: Run Tests
         run: |
           make test      
+      - name: Kill Redis
+        run: |
+          make kill-redis
