--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: CI
+
 on:
   push:
     branches:
@@ -6,28 +7,42 @@ on:
   pull_request:
     branches:
       - "**"
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        redis: [6.x]
+
     steps:
-      - uses: actions/checkout@v1
-      - name: Install Deno
+      - uses: actions/checkout@v2
+
+      - name: Get Deno version
         run: |
           echo "::set-env name=DENO_VERSION::$(cat .denov)"
-      - uses: denolib/setup-deno@master
+
+      - name: Set up Deno ${{ env.DENO_VERSION }}
+        uses: denolib/setup-deno@master
         with:
           deno-version: ${{ env.DENO_VERSION }}
+
       - name: Check mod.ts
         run: |
           deno run --allow-read --allow-write tools/make_mod.ts
           git diff --exit-code
+
       - name: Run lint
         run: |
-          make lint
-      - name: Install Redis
-        run: |
-          make testdeps
-          echo "::add-path::./testdata/redis/src"
+          deno fmt --check
+          deno lint --unstable
+
+      - name: Set up Redis ${{ matrix.redis }}
+        uses: shogo82148/actions-setup-redis@v1
+        with:
+          redis-version: ${{ matrix.redis }}
+          auto-start: "false"
+
       - name: Run tests
         run: |
-          make test
+          deno test -A redis_test.ts
