BREAKING: Stop exposing internal things from mod.ts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Check mod.ts
         run: |
-          deno run --allow-read --allow-write tools/make_mod.ts
+          deno run --allow-read --allow-write --allow-run tools/make_mod.ts
           git diff --exit-code
 
       - name: Run lint
