--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,11 @@ jobs:
         with:
           deno-version: ${{ env.DENO_VERSION }}
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "12"
+
       - name: Check mod.ts
         run: |
           deno run --allow-read --allow-write --allow-run tools/make_mod.ts
@@ -46,3 +51,11 @@ jobs:
       - name: Run tests
         run: |
           deno test -A redis_test.ts
+
+      - name: Run benchmarks
+        working-directory: ./benchmark
+        run: |
+          yarn install --frozen-lockfile
+          deno bundle benchmark.ts > benchmark.js
+          deno test -A deno-redis.ts
+          node ioredis.js
