chore: Use 'deno run' instead of 'deno test'

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,5 +57,5 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           deno bundle benchmark.ts > benchmark.js
-          deno test -A deno-redis.ts
+          deno run -A deno-redis.ts
           node ioredis.js
