fix: Fix lint errors

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,8 @@ jobs:
 
       - name: Run lint
         run: |
-          deno fmt --check
-          deno lint --unstable
+          deno fmt --check --ignore=./benchmark/node_modules
+          deno lint --unstable --ignore=./benchmark/node_modules
 
       - name: Set up Redis ${{ matrix.redis }}
         uses: shogo82148/actions-setup-redis@v1
