test: Temporary disable all tests except those for redis cluster

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Run tests
         run: |
-          deno test --allow-net --allow-read=tests --allow-write=tests/server --allow-run=redis-server,redis-cli redis_test.ts
+          deno test --allow-net --allow-read=tests --allow-write=tests/server --allow-run=redis-server,redis-cli tests/cluster/test.ts # deno test --allow-net --allow-read=tests --allow-write=tests/server --allow-run=redis-server,redis-cli redis_test.ts
       - uses: bahmutov/npm-install@v1
         with:
           working-directory: benchmark
