--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Run tests
         run: |
           deno test --allow-net --allow-read=tests --allow-write=tests/tmp --allow-run=redis-server,redis-cli --unstable redis_test.ts
-          deno test --doc --no-run --import-map=import_map.test.json
+          deno test --doc --no-run --import-map=import_map.test.json --unstable
       - uses: bahmutov/npm-install@v1
         with:
           working-directory: benchmark
