--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,8 +51,11 @@ jobs:
 
       - name: Run tests
         run: |
-          deno test --allow-net --allow-read=tests --allow-write=tests/tmp --allow-run=redis-server,redis-cli --unstable ./tests
-          deno test --doc --no-run --import-map=import_map.test.json --unstable
+          deno test --allow-net --allow-read=tests --allow-write=tests/tmp --allow-run=redis-server,redis-cli ./tests
+      - name: Run doc tests
+        run: |
+          deno test --doc --no-run --import-map=import_map.test.json
+
       - uses: bahmutov/npm-install@v1
         with:
           working-directory: benchmark
