fix: Upload benchmark results to artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,3 +62,7 @@ jobs:
         run: |
           deno task bench:ioredis
           deno task bench:deno-redis
+      - uses: actions/upload-artifact@v3
+        with:
+          name: benchmark
+          path: tmp/*.html
