deps: deno@v1.21.0, deno_std@v0.136.0

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           deno task make_mod
           git diff --exit-code
-          deno cache mod.ts # Ensure that mod.ts works without --unstable
+          deno check mod.ts
 
       - name: Run lint
         run: |
