--- a/deno.json
+++ b/deno.json
@@ -20,7 +20,7 @@
     "test:doc": "deno test --doc --no-run --import-map=import_map.test.json",
     "make_mod": "deno run --allow-read --allow-write --allow-run tools/make_mod.ts",
     "dlink": "deno run --allow-read=modules.json,modules-lock.json,vendor --allow-write=modules-lock.json,vendor --allow-net=deno.land https://deno.land/x/dlink@v0.8.9/dlink.ts && deno fmt modules-lock.json",
-    "bench:deno-redis": "deno run --compat --unstable --allow-net=127.0.0.1:6379 --allow-read --allow-env --allow-write=tmp benchmark/deno-redis.ts",
+    "bench:deno-redis": "deno run --unstable --allow-net=127.0.0.1:6379 --allow-read --allow-env --allow-write=tmp --import-map=benchmark/import_map.json benchmark/deno-redis.ts",
     "bench:ioredis": "node benchmark/ioredis.js"
   }
 }
