--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,5 +86,5 @@ jobs:
           echo "]]>" >> $GITHUB_STEP_SUMMARY
           echo "<![CDATA[" >> $GITHUB_STEP_SUMMARY
           cat tmp/ioredis-bench.html >> $GITHUB_STEP_SUMMARY
-          echo "]]>" $GITHUB_STEP_SUMMARY
+          echo "]]>" >> $GITHUB_STEP_SUMMARY
 
