--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,9 +81,9 @@ jobs:
         # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#adding-a-job-summary
         # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#adding-a-job-summary
         run:
-          echo "<![CDATA[" >> $GITHUB_STEP_SUMMARY
+          echo '<![CDATA[' >> $GITHUB_STEP_SUMMARY
           cat tmp/deno-redis-bench.html >> $GITHUB_STEP_SUMMARY
-          echo "]]>" >> $GITHUB_STEP_SUMMARY
-          echo "<![CDATA[" >> $GITHUB_STEP_SUMMARY
+          echo ']]>' >> $GITHUB_STEP_SUMMARY
+          echo '<![CDATA[' >> $GITHUB_STEP_SUMMARY
           cat tmp/ioredis-bench.html >> $GITHUB_STEP_SUMMARY
-          echo "]]>" >> $GITHUB_STEP_SUMMARY
+          echo ']]>' >> $GITHUB_STEP_SUMMARY
