--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,13 +77,11 @@ jobs:
       - name: Run benchmarks (deno-redis)
         run: |
           deno task bench:deno-redis
-      - name: Output results as a job summary
-        # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#adding-a-job-summary
-        # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#adding-a-job-summary
+      - name: Output results as a job summary (deno-redis)
         run:
-          echo '<![CDATA[' >> $GITHUB_STEP_SUMMARY
+          cat tmp/deno-redis-bench.html
           cat tmp/deno-redis-bench.html >> $GITHUB_STEP_SUMMARY
-          echo ']]>' >> $GITHUB_STEP_SUMMARY
-          echo '<![CDATA[' >> $GITHUB_STEP_SUMMARY
+      - name: Output results as a job summary (ioredis)
+        run:
+          cat tmp/ioredis-bench.html
           cat tmp/ioredis-bench.html >> $GITHUB_STEP_SUMMARY
-          echo ']]>' >> $GITHUB_STEP_SUMMARY
