--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,10 +79,7 @@ jobs:
           deno task bench:deno-redis
       - name: Output results as a job summary (deno-redis)
         run: |
-          ls tmp
-          cat tmp/deno-redis-bench.html
-          cat tmp/deno-redis-bench.html >> $GITHUB_STEP_SUMMARY
+          cat tmp/deno-redis-bench.html.table.html >> $GITHUB_STEP_SUMMARY
       - name: Output results as a job summary (ioredis)
         run: |
-          cat tmp/ioredis-bench.html
-          cat tmp/ioredis-bench.html >> $GITHUB_STEP_SUMMARY
+          cat tmp/ioredis-bench.html.table.html >> $GITHUB_STEP_SUMMARY
