--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,9 +77,7 @@ jobs:
       - name: Run benchmarks (deno-redis)
         run: |
           deno task bench:deno-redis
-      - name: Output results as a job summary (deno-redis)
+      - name: Output results as a job summary
         run: |
           cat tmp/deno-redis-bench.table.html >> $GITHUB_STEP_SUMMARY
-      - name: Output results as a job summary (ioredis)
-        run: |
           cat tmp/ioredis-bench.table.html >> $GITHUB_STEP_SUMMARY
