--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
     strategy:
       matrix:
         redis: [6.2]
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v2
       - name: Get Deno version
