--- a/deno.json
+++ b/deno.json
@@ -13,6 +13,9 @@
         "benchmark/benchmark.js",
         "benchmark/ioredis.js"
       ]
+    },
+    "rules": {
+      "exclude": ["no-deprecated-deno-api"]
     }
   },
   "tasks": {
