ci: re-enable `deno task make_mod`

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
           deno-version: ${{ env.DENO_VERSION }}
       - name: Check mod.ts
         run: |
-          # deno task make_mod
-          # git diff --exit-code
+          deno task make_mod
+          git diff --exit-code
           deno check mod.ts
 
       - name: Run lint
