--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
           path: |
             ~/.deno
             ~/.cache/deno
-          key: ${{ runner.os }}-deno-${{ hashFiles('**/import_map.json', '**/.deno-version', '**/modules-lock.json') }}
+          key: ${{ runner.os }}-deno-benchmark-${{ hashFiles('**/import_map.json', '**/.deno-version', '**/modules-lock.json') }}
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
