--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         redis: [6.2]
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
       - name: Get Deno version
@@ -60,6 +61,7 @@ jobs:
     strategy:
       matrix:
         redis: [6.2]
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
       - name: Get Deno version
