--- a/deno.json
+++ b/deno.json
@@ -18,7 +18,8 @@
     "make_mod": "deno run --allow-read --allow-write --allow-run --check tools/make_mod.ts",
     "dlink": "deno run --allow-read=modules.json,modules-lock.json,vendor --allow-write=modules-lock.json,vendor --allow-net=deno.land,esm.sh https://deno.land/x/dlink@v0.8.9/dlink.ts && deno fmt modules-lock.json vendor",
     "bench:deno-redis": "DENO_NO_PACKAGE_JSON=1 deno run --unstable --allow-net=127.0.0.1:6379 --allow-read --allow-env --allow-write=tmp --import-map=benchmark/import_map.json benchmark/deno-redis.ts",
-    "bench:ioredis": "node benchmark/ioredis.js"
+    "bench:ioredis": "node benchmark/ioredis.js",
+    "www": "deno run --allow-read=. --allow-write=www --allow-env=WWW_BASE_URL tools/generate_docs.ts"
   },
   "lock": false
 }
