chore(lint): enable `no-console` rule

--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,8 @@
     "exclude": [
       "benchmark/benchmark.js",
       "benchmark/ioredis.js"
-    ]
+    ],
+    "rules": { "include": ["no-console"] }
   },
   "test": {
     "exclude": ["benchmark/", "tmp/", "vendor/"]
