--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - "**"
 
+env:
+  # TODO: Remove `DENO_FUTURE=1` once lockfile v4 is stabilized
+  # https://github.com/denoland/deno/pull/25059
+  DENO_FUTURE: 1
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -15,8 +20,6 @@ jobs:
       matrix:
         redis: [6.2]
     timeout-minutes: 15
-    env:
-      DENO_FUTURE: 1
     steps:
       - uses: actions/checkout@v2
       - name: Get Deno version
