deps: bump Deno to `v1.46.1` and `deno_std` to the latest version (#445)
* Enabled `DENO_FUTURE=1` in CI, which should be removed in the future
* Migrated to lockfile v4
* Bumped `@std/assert` to `v1.0.2`
* Bumped `@std/async` to `v1.0.3`
* Bumped `@std/io` to `v0.224.5`
* Bumped `@std/testing` to `v1.0.0`

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - "**"
 
+env:
+  # TODO: Remove `DENO_FUTURE=1` once lockfile v4 is stabilized
+  # https://github.com/denoland/deno/pull/25059
+  DENO_FUTURE: 1
+
 jobs:
   test:
     runs-on: ubuntu-latest
