--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "exclude": [
-    "benchmark/node_modules"
+    "benchmark/node_modules",
+    "tmp"
   ],
   "lint": {
     "exclude": [
@@ -10,15 +11,15 @@
     "rules": { "include": ["no-console"] }
   },
   "test": {
-    "exclude": ["benchmark/", "tmp/", "vendor/"]
+    "exclude": ["benchmark/", "vendor/"]
   },
   "tasks": {
     "lock": "rm deno.lock && DENO_FUTURE=1 deno cache --reload mod.ts experimental/**/mod.ts tests/**/*.ts",
     "check:deno-json": "deno run --allow-read=deno.json tools/check_deno_json.js",
     "test": "DENO_FUTURE=1 deno test --allow-net --allow-read=tests --allow-write=tests/tmp --allow-run=redis-server,redis-cli --coverage=coverage --trace-leaks --frozen-lockfile",
-    "test:doc": "deno test --doc --no-run --import-map=import_map.test.json",
+    "test:doc": "deno check --doc-only --import-map=import_map.test.json README.md experimental/cluster/README.md",
     "coverage": "deno coverage ./coverage --lcov --output=coverage/lcov.info",
-    "make_mod": "deno run --allow-read --allow-write --allow-run --check tools/make_mod.ts",
+    "make_mod": "deno run --allow-read --allow-write --allow-run=deno --check tools/make_mod.ts",
     "bench:deno-redis": "DENO_NO_PACKAGE_JSON=1 deno run --unstable --allow-net=127.0.0.1:6379 --allow-read --allow-env --allow-write=tmp --import-map=benchmark/import_map.json benchmark/deno-redis.ts",
     "bench:ioredis": "node benchmark/ioredis.js"
   }
